tests/errors/2014-8.vb
'#compiler-options:/warnaserror-:xx
'#compiler-message:Command line error BC2014 : the value 'xx' is invalid for option 'warnaserror'
'#exit-code:1